# scaleguard-api

./: .gitignore  README.md  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e6ea3861ba3_initial_migration.py
backend/app/: main.py  models.py
backend/app/api/: auth.py  register.py  users.py
backend/app/db/: userAuth.py  userRegister.py
backend/app/helpers/: authHelper.py  rateLimit.py
backend/app/helpers/lua/: ratelimit.lua
backend/app/schemas/: token.py  user.py
backend/test/: locustfile.py
nginx/: nginx.conf
